# embedding_comp

dm542内核模块/: .vscode-ctags  Makefile  README.md  dm542.c  dm542.ko  dm542.mod
dockerfile/elf/: Dockerfile
dockerfile/qt/: Dockerfile
qt程序/: CMakeLists.txt  CMakePresets.json  main.cpp  x64-arm64-toolchain.cmake
qt程序/hardware/dm542/inc/: Dm542Controller.h
qt程序/hardware/dm542/src/: Dm542Controller.cpp
qt程序/hardware/hkcam/inc/: CameraParams.h  GslInterp.h  ImageAcquisitionWorker.h  MvCameraControl.h  MvErrorDefine.h  MvISPErrorDefine.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h
qt程序/hardware/hkcam/lib/aarch64/: CommonParameters.ini
qt程序/hardware/hkcam/src/: GslInterp.cpp  ImageAcquisitionWorker.cpp
qt程序/ui/: qtccm.ui
qt程序/ui/inc/: MainWindow.h
qt程序/ui/src/: CamContral.cpp  MainWindow.cpp  MotorControlTab.cpp
电路/: 信号及低压供电板.eprj  分电板.eprj
设备树和内核编译设置/: elf2-3588-common.dtsi  elf2_kernel_defconfig
